--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      .tooltipClass > .tooltip-inner {
+        background: #dc3545;
+      }
+      .tooltipClass > .tooltip-arrow::before {
+        border-bottom-color: #dc3545 !important;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
